# ChangeLog for x11-misc/transset
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/transset/ChangeLog,v 1.13 2008/01/07 22:47:22 omp Exp $

  07 Jan 2008; David Shakaryan <omp@gentoo.org>
  transset-0.1_pre20040821.ebuild:
  Add missing dev-util/pkgconfig dependency. (bug #204592)

  08 Sep 2007; Joseph Jezak <josejx@gentoo.org>
  transset-0.1_pre20040821.ebuild:
  Marked ppc stable for bug #191615. Marked ~ppc64 too.

  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  transset-0.1_pre20040821.ebuild:
  Stable on amd64 wrt bug #191615.

  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  transset-0.1_pre20040821.ebuild:
  Stable on x86 wrt bug #191615.

  24 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  transset-0.1_pre20040821.ebuild:
  Fix dependencies.  (Bug #168100, Nguyen Thai Ngoc Duy)

  24 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>;
  transset-0.1_pre20040821.ebuild:
  Add xproto dep.

  24 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>;
  transset-0.1_pre20040821.ebuild:
  Port to modular X.

  11 Sep 2004; Tom Martin <slarti@gentoo.org> :
  Marked ~amd64.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  transset-0.1_pre20040821.ebuild:
  Masked transset-0.1_pre20040821.ebuild stable for ppc

  02 Sep 2004; David Holm <dholm@gentoo.org> transset-0.1_pre20040821.ebuild:
  Added to ~ppc.

*transset-0.1_pre20040821 (21 Aug 2004)

  21 Aug 2004; Seemant Kulleen <seemant@gentoo.org>
  +transset-0.1_pre20040821.ebuild:
  New package to enable setting transparency levels. This is a hard masked
  snapshot for now
