@@ -1,4 +1,4 @@
 DIST driconf-0.9.1.tar.gz 112529 RMD160 eb600372ec2d406662b44c04b28a97f7562dd32c SHA1 523dc84dae8faf443bbc4d32d1e8e209fbe10ff5 SHA256 4849a43f6324498e943c03777bce571229b5446985b1cec596b365505e76f73f
-EBUILD driconf-0.9.1.ebuild 977 RMD160 d2caa1acdad950a461e49a8a050ba5c212f3373f SHA1 e16b5baceeb011651a0180cc482b03adb5dd9e9d SHA256 cd4ea8e03f32e4793efafa2aa62975721c4ffe7e399b5cc3ec49327737f12b74
-MISC ChangeLog 2238 RMD160 0d759b22bf8d3895689790bacf53c7c29fc32306 SHA1 7236ce29b2da875109fa66da115676d80dad55d0 SHA256 0e5f45b7f5bf8b8b33fc19133cfa03469bb223c729221125c284f18d4e82f34b
+EBUILD driconf-0.9.1.ebuild 976 RMD160 f9a1e73743b6755a719e389baa6f21d8811d3471 SHA1 e2e73fd9140ed33fc5e9264fdcbb4f91b8d35b0b SHA256 86050ceb5ba6f7e8ad67a536755141c967a1aef7050ada715b0af613987f0e89
+MISC ChangeLog 2357 RMD160 e357dd3be808f4818c53d956c1f1d9e07153ded6 SHA1 6a6ad4e603ccde0a5b123f3eee68d122c689b873 SHA256 03c866b3c7f191770d6db2a17c66ecd30c0fa9719b2cde0986bff61164790438
 MISC metadata.xml 157 RMD160 bfca46b367901674b4ec5419c063ae27fb446b0a SHA1 4fe7fb7398abd34822cec8be77f8aaf86e28a1a3 SHA256 bc6a4a3d5e32f9329039b242036828256c9f2c33862bc1d606d4ac8427032fdc
