@@ -1,4 +1,4 @@
 DIST transset-0.1_pre20040821.tar.bz2 7035 RMD160 36ca8c450596926040cbc3b0ee374e9189d8f2f8 SHA1 4d0c65f6c9db4ead5127bdfdfd6e3bfeae1ba84c SHA256 ceac4f4a9ab03dc36a18ee8a1e59a1114e4d48952521754c820b9e90bd57d0c3
-EBUILD transset-0.1_pre20040821.ebuild 765 RMD160 2782d2b621fd67664c8aacd61a30d144ce1ee73f SHA1 d244f177d2725c242b482188ee30043809275b80 SHA256 fb61d20ce73f677e3cb3d7d84ba99a78f2cfc4c4b60c0d3dfb9f615590bd684e
-MISC ChangeLog 1644 RMD160 166405cba48f616524d7f44214cd14ec0bcfebd9 SHA1 8ce75927fcf8490b708717229a3cffe736590c26 SHA256 6771248a6affabad11f8979e276fd0cd781ed055fb49295632a6d6aa7f945a3a
+EBUILD transset-0.1_pre20040821.ebuild 767 RMD160 205fa85895fc5e2f14d4e8970ef504182e2373e6 SHA1 b24babfbc1ddde40081eb037755341c9d60db47f SHA256 7c77b1131d8e870491e9204cbda6458376f383237620160e6b3094f4fada89f4
+MISC ChangeLog 1793 RMD160 a6cfa5ec850bf11e3efd9904da3c0f77711e7ab0 SHA1 e530c216753c90cb56492f3270615efbd1d32218 SHA256 c67ad157bdc5ef30774286e74051662c99e00b5d45ea067d2f8b0f2075aa2e69
 MISC metadata.xml 230 RMD160 a293db25b0a2b203eb1b788ee62601190618066e SHA1 c54cfbf65124c6abed943e76d0e3e6c976fc4f12 SHA256 92ca18d8e0533e35b2537904c3d02051148894ef05496a26db29fecc0066a6e0
