@@ -7,6 +7,6 @@ EBUILD util-macros-1.1.5.ebuild 530 RMD160 493098a3635c21665180a11bffd86578c9412
 EBUILD util-macros-1.1.6-r1.ebuild 493 RMD160 8d51f345178c92c4f0bcd2bdcddedbcbdb8e4bde SHA1 01f26184a5ec61be1e5dd5ab96e0d87903ede2bb SHA256 61a4b708d01d43cebcea6fe57cdca4dc30f37ec06feeac261e6638846764b024
 EBUILD util-macros-1.1.6.ebuild 543 RMD160 0c3cc9819481dbdec45b939bbcca11c425451991 SHA1 b1dcf3d78ac5f5150fe943ca42300d8125d261c2 SHA256 7945179ba7be7f03ba4b3a4a42d63d8e9a5fc60cf8e39e6defb92c3dd3eef39e
 EBUILD util-macros-1.2.0.ebuild 489 RMD160 593cf47f0c6a0490c8bc110cf0fe98e99df17473 SHA1 ab24a26f531e45f94c0b8119852c3db26c5d68f7 SHA256 d719432b98f1562c3f6acd8c0b58ea064b164a3a85c94a383ac474836ef785b8
-EBUILD util-macros-1.2.1.ebuild 486 RMD160 d4b12d51f2d8c13c4f3987f9592eaab9f9ff0585 SHA1 ca54707906a8c19c6fa3db3a7111d4bb22725a9a SHA256 d8ac6b36b450d61b803b7963f830927f9a20e9a6bd8af6fc0e4237d1a4e58198
-MISC ChangeLog 8504 RMD160 6a14a3b318b64a6ae8266c6e70f5881e946024a3 SHA1 3607378c942dbc66430755cd61c93862b3991f06 SHA256 bce4d368ef46cd7676f74d697125da19d4819c665db7352a864795633b99d303
+EBUILD util-macros-1.2.1.ebuild 485 RMD160 8d905835aaaf0efb3836723c19e09902645451d9 SHA1 14cecce4cd87223e304bc3554cebbc8a47dcc8a8 SHA256 5ccb88a88ceb81128469213dca791030e1d126e8bdc62c0d9ee2c1ccd748ae3c
+MISC ChangeLog 8634 RMD160 2dd69f9afbe058d066d7b94fa919720a1ba711a3 SHA1 afbb24aa7a344a45a8ac357dac35ba21ff1f81c3 SHA256 25a588a7eddbb9000532ce78c2a80e1c0b679c50d2b455babf4ca4f1b1ac0de1
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
