@@ -2,6 +2,6 @@ AUX fix-unmapped-window-opacity.patch 1446 RMD160 9bc881969740f07f5b095a34cfa9a1
 DIST xcompmgr-1.1.3.tar.gz 79840 RMD160 65c7c045a0c1361b0dfa346cdc73439ad0db0f2c SHA1 d7600dbec8fe812f5a46772c67731dca83c7bf83 SHA256 5d4b1fb063876c7b3883e45b69d3a07845a62a132c8a9994de16bf8d6c199d44
 DIST xcompmgr-1.1.4.tar.bz2 78389 RMD160 f99d8e0b6995300849c7670b4ccc44b427f480c2 SHA1 f9b0a46a719c69309208f4f970c598528aad9814 SHA256 4bf647745b4de940ef75796fc8ad4e1f83c276e474f7b6779f317fcd070de884
 EBUILD xcompmgr-1.1.3-r1.ebuild 603 RMD160 033430f173188596cc10b764def7860e511d16e2 SHA1 b2c4f4118c4bdeb9a44d371b67514c5f00357cb0 SHA256 6606c1687777c3f0900ca7107822ee70f04e45abd4645a857d0d493bb94bf38b
-EBUILD xcompmgr-1.1.4.ebuild 579 RMD160 bfb0913a6f8dbad68745c347dddfc217d6cfc6f1 SHA1 1f1b77e9f9a6cc60938d534995cda10da1fe8690 SHA256 612547d174284156f2b526cf5847b995c3ce9ab1f1bb8816b1c0293679213691
-MISC ChangeLog 4639 RMD160 815c315869cca5e58779466178eddd0dbf8b7da2 SHA1 132cfdb21e1b0dc79097a8e215eafe1ec74f0fc4 SHA256 402e2f688b0ad002cde3f3415d6fee9cf07d9d72c8d56c1d88da032c89535803
+EBUILD xcompmgr-1.1.4.ebuild 578 RMD160 4f03487b7606d1ff927be7070f4db84a40335602 SHA1 67f8d46c828bc5a0317a7470f783118ceff1e8b1 SHA256 5385498e05990c398ba07ea041083550977bebce94b99eaa6e2c3ab2bef3df0c
+MISC ChangeLog 4763 RMD160 a2709a3bc0594e4e58b05d6fb4159bc288285119 SHA1 e2f36cec9a202cd0bcf50b2af1753268016b5d6e SHA256 ef5eab81cc5862771d3f2126476584fcd8a633e41c7f0df7900d74b6f4b98b30
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
