@@ -3,6 +3,6 @@ DIST xinput-1.3.0.tar.bz2 94468 RMD160 38ff359a7ce4f86251c1353d86700a3fc49600b5 
 DIST xinput-1.4.0.tar.bz2 103854 RMD160 283cf5c54decd5657b1bd5db64513cfa42bdb787 SHA1 3caa25b24a2b5c7b00ab4a781999a76f47e92827 SHA256 503e73d10482496af57226454c09f44afe63ee5dd4240deb81f5ca27337cf119
 EBUILD xinput-1.2.ebuild 762 RMD160 4cd0e2aaa0fe3e1c2071e111d35b016b67a20709 SHA1 1248834ec96da9fef47d04f363f87e2dedc48fd4 SHA256 649c543f8d764ca66ec591cded90a766485ad01aa6735665ec3eabab94893845
 EBUILD xinput-1.3.0.ebuild 593 RMD160 5afa4a67dfa0ee25304af792a2d9635b1801b799 SHA1 0ad75da8a3642e159a59cec0777808daab71a72e SHA256 1362980e553f9e90adbe049682b1919c647bda8460af448ffd97184822729187
-EBUILD xinput-1.4.0.ebuild 651 RMD160 57d526ef98ebd951333231586e33ac59ac03d2f5 SHA1 4a0daec519d04e203534fad8441d067cf1e0d09c SHA256 ab41af18d260b5031cd4e5a642d1bcddcf59e0d2835d9be244ecca585fcd44be
-MISC ChangeLog 2487 RMD160 cb4dd611375edadb35ff1742d9672a4bc9886454 SHA1 47901bc206469634ed65b9908832d572895c22af SHA256 b45f30b032df4cf79865a5844530925ac943cd57f883f1aee0e386d7991f5e47
+EBUILD xinput-1.4.0.ebuild 650 RMD160 333f67c0f1f35ad7731c9205650047a02c8b8ea2 SHA1 452f76bafb7bef0644f62bde143997a30caa7097 SHA256 b884401a6b8678f8224e65f8c40db05000345a7eca6cb8cbff9c4739c7d21f35
+MISC ChangeLog 2607 RMD160 a2d8449444f0536ae2f39296b7741388de584150 SHA1 8661997c662c4e99317e9d94e550708be24ff635 SHA256 43bc3d41d126b5fa25851a0cd5071c98e09f57f90b994d9cd623d60b8e2d6eb4
 MISC metadata.xml 157 RMD160 bfca46b367901674b4ec5419c063ae27fb446b0a SHA1 4fe7fb7398abd34822cec8be77f8aaf86e28a1a3 SHA256 bc6a4a3d5e32f9329039b242036828256c9f2c33862bc1d606d4ac8427032fdc
