@@ -12,6 +12,6 @@ EBUILD xkeyboard-config-1.1.ebuild 1561 RMD160 2ef775bcc2af68cbc4229cfa3d61923f0
 EBUILD xkeyboard-config-1.2.ebuild 1571 RMD160 7b92694c4d903fd8f503611e3fc8c34607310f7a SHA1 1d1903a4cf4cdfafc7ed6f27b145e19c320a412c SHA256 cac91aacb386dd33c9acc065560ca8bef3084d4c5f9c76c7d3759cf75ed5d6fc
 EBUILD xkeyboard-config-1.3.ebuild 1571 RMD160 ba847ffb29fe61b9fec6d372119fea60abd65d92 SHA1 c3ffcda4c850813e1d2c97f8eff34aceb8e6a566 SHA256 81ee7470edbc4074bea2925eabd5634fb1d37095863521d56b4863eda2a4a5d1
 EBUILD xkeyboard-config-1.4.ebuild 1579 RMD160 56a9d8fe0c963e2b389650ad71d36aa839f07c94 SHA1 66d30cecc4998c6cf05663e36330da86b1cd17e2 SHA256 da6376caf6449e845e3d56e82bcee2127cdd7be01e9ac447993536b42b5a8bdb
-EBUILD xkeyboard-config-1.5.ebuild 1622 RMD160 d43a58d1175d0a085f5640c42febd70b46406939 SHA1 be152531ecfb5677595a0b4c559069f4405aa2b2 SHA256 d135e1b681642ba4478fc9cdbab1422310f1c5a435da012d90496ffb74f9e03b
-MISC ChangeLog 8827 RMD160 93149dd6e17cb4858d095b42784ec90859491e0a SHA1 b9cefbbda1a3e6183bbcb508aeb6e3cca4f74414 SHA256 fcb7d5805e9cb891c5bb8a0238c86ea4798dd2f1c49c87a21636c710696a323e
+EBUILD xkeyboard-config-1.5.ebuild 1621 RMD160 5828767749e247ee3cf1fbd47d62cb66c8b22204 SHA1 758dc7c70c5380a8a470b317d91a4235cb52fc2a SHA256 7d8a5acdc4ff2b1df3137195f9d94972760bf36eefcb01e6fc0102f7be44cee9
+MISC ChangeLog 8963 RMD160 5858c6cfa9522dfe3e48886b6c43d62d7bbef825 SHA1 7762fcb254a2cea6087b55ff5b8d2f5ffd46c7fe SHA256 598a1a7840b3f79a3695dee25a5a553854fef83e8388a8323e1747d8adb670a5
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
